--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
   <header class="page-header">
     <div class="wrapper">
       <h1 class="logo">
@@ -43,10 +42,7 @@
     </div>
   </div>
 
-
-
   <main>
-
     <div class="box-shear">
       <div class="page-caption">Устали от серости мегаполиса?</div>
       <div class="page-caption">Нам есть, что вам предложить!</div>
@@ -73,26 +69,23 @@
       <ul class="slider slider--reviews">
         <li class="active">
           <blockquote class="reviews">
-            <h3 class="reviews__caption">Николай Петров</h3>
+            <cite class="reviews__author">Николай Петров</cite>
             <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </blockquote>
         </li>
-          
         <li>
           <blockquote class="reviews">
-            <h3 class="reviews__caption">Николай Петров</h3>
+            <cite class="reviews__author">Николай Петров</cite>
             <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </blockquote>
         </li>
-
         <li>
           <blockquote class="reviews">
-            <h3 class="reviews__caption">Николай Петров</h3>
+            <cite class="reviews__author">Николай Петров</cite>
             <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </blockquote>
         </li>
       </ul>
-      
       <div class="slider__pagination">
         <i class="active"></i>
         <i></i>
@@ -105,7 +98,7 @@
         <li class="active">
           <table class="price-table">
             <tr>
-              <th class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+              <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
             </tr>
             <tr>
               <td>Розовый фильтр</td>
@@ -121,11 +114,10 @@
             </tr>
           </table>
         </li>
-
         <li>
           <table class="price-table">
             <tr>
-              <th class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+              <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
             </tr>
             <tr>
               <td>Розовый фильтр</td>
@@ -142,16 +134,13 @@
           </table>
         </li>
       </ul>
-
       <div class="slider__pagination">
         <i class="active"></i>
         <i></i>
         <i></i>
       </div>
     </div>
-
   </main>
-
 
 
   <footer class="page-footer">
@@ -175,8 +164,6 @@
     </div>
   </footer>
 
-
   <!-- <script src="js/script.js"></script> -->
-
 </body>
 </html>
