--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   </div>
 
   <main>
-    <div class="box-shear">
+    <div class="box">
       <div class="page-caption">Устали от серости мегаполиса?</div>
       <div class="page-caption">Нам есть, что вам предложить!</div>
     </div>
 
-    <div class="box-shear box-shear--grey">
+    <div class="box box--shear">
       <ul class="features">
         <li class="features__item">
           <strong class="features__caption">Поднимает настроение</strong>
@@ -65,7 +65,7 @@
       </ul>
     </div>
 
-    <div class="box-shear">
+    <div class="box">
       <ul class="slider slider--reviews">
         <li class="active">
           <blockquote class="reviews">
@@ -93,7 +93,7 @@
       </div>
     </div>
 
-    <div class="box-shear box-shear--grey">
+    <div class="box box--shear">
       <ul class="slider slider--price">
         <li class="active">
           <table class="price-table">
@@ -144,7 +144,7 @@
 
 
   <footer class="page-footer">
-    <div class="page-footer__box-angle">
+    <div class="box box--angle">
       <div class="page-footer__contacts">
         <h2 class="page-caption">Остались вопросы? Свяжитесь с нами!</h2>
         <dl>
