--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Pink</title>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
-
 <body>
   <header class="page-header">
     <div class="wrapper">
@@ -26,9 +25,8 @@
       </div>
     </div>
   </header>
-
   <div class="intro">
-    <div class="intro__cont">
+    <div class="intro__container">
       <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
       <div class="intro__desc">
         <a class="btn" href="#">Скачать приложение</a>
@@ -41,13 +39,11 @@
       </div>
     </div>
   </div>
-
   <main>
     <div class="box">
       <div class="page-caption">Устали от серости мегаполиса?</div>
       <div class="page-caption">Нам есть, что вам предложить!</div>
     </div>
-
     <div class="box box--shear">
       <ul class="features">
         <li class="features__item">
@@ -64,7 +60,6 @@
         </li>
       </ul>
     </div>
-
     <div class="box">
       <ul class="slider slider--reviews">
         <li class="active">
@@ -92,7 +87,6 @@
         <i></i>
       </div>
     </div>
-
     <div class="box box--shear">
       <ul class="slider slider--price">
         <li class="active">
@@ -141,8 +135,6 @@
       </div>
     </div>
   </main>
-
-
   <footer class="page-footer">
     <div class="box box--angle">
       <div class="page-footer__contacts">
@@ -150,10 +142,8 @@
         <dl>
           <dt>Звоните:</dt>
           <dd>8 (800) 1000 900</dd>
-
           <dt>Пишите:</dt>
           <dd>hello@pinkapp.ru</dd>
-
           <dt>Приезжайте в гости:</dt>
           <dd>Санкт-Петербург, Невский проспект, д. 20</dd>
         </dl>
@@ -163,7 +153,6 @@
       </div>
     </div>
   </footer>
-
   <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
