--- a/index.html
+++ b/index.html
@@ -154,5 +154,21 @@
     </div>
   </footer>
   <!-- <script src="js/script.js"></script> -->
+        <!-- PixLayout -->
+  <script src="_assets/jquery.js"></script>
+  <script src="_assets/jquery.pixlayout.js"></script>
+  <script>
+    $(function(){
+      $.pixlayout({
+        src: "_assets/mob-index.jpg",
+        opacity: 0.4,
+        top: -2,
+        center: true,
+        clip: true,
+        show: true,
+      })
+    });
+  </script>
+  <!-- / PixLayout -->
 </body>
 </html>
