--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </h1>
       <div class="page-header__nav-wrap">
         <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
-        <nav class="main-nav">
+        <nav class="main-nav" style="display: none;">
           <ul>
             <li class="active"><a href="#">Информация</a></li>
             <li><a href="#">Возможности</a></li>
