--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Pink</title>
-  <base href="https://github.com/katiadobra/12332-Pink/tree/gh-pages/">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +10,7 @@
   <header class="page-header">
     <div class="wrapper">
       <h1 class="logo">
-        <a href="/"><img src="img/pink-logo-mob.png" alt="Pink"></a>
+        <a href="index.html"><img src="img/pink-logo-mob.png" alt="Pink"></a>
       </h1>
       <div class="page-header__nav-wrap">
         <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
