--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
   </footer>
   <!-- <script src="js/script.js"></script> -->
         <!-- PixLayout -->
-  <script src="_assets/jquery.js"></script>
-  <script src="_assets/jquery.pixlayout.js"></script>
+  <script src="assets/jquery.js"></script>
+  <script src="assets/jquery.pixlayout.js"></script>
   <script>
     $(function(){
       $.pixlayout({
-        src: "_assets/mob-index.jpg",
+        src: "assets/mob-index.jpg",
         opacity: 0.4,
         top: -2,
         center: true,
