--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </dl>
       </div>
       <div class="page-footer__map">
-        <img src="img/map.jpg" alt="Map">
+        <img src="img/map.png" alt="Map">
       </div>
     </div>
   </footer>
