--- a/index.html
+++ b/index.html
@@ -3,156 +3,162 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Pink</title>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="page-header">
-    <div class="wrapper">
-      <h1 class="logo">
-        <a href="index.html"><img src="img/pink-logo-mob.png" alt="Pink"></a>
-      </h1>
-      <div class="page-header__nav-wrap">
-        <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
-        <nav class="main-nav" style="display: none;">
-          <ul>
-            <li class="active"><a href="#">Информация</a></li>
-            <li><a href="#">Возможности</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Стоимость</a></li>
+<div class="page-wrap">
+    <header class="page-header">
+      <div class="page-header__container">
+        <h1 class="logo">
+          <a href="index.html"><img src="img/pink-logo-mob.png" alt="Pink"></a>
+        </h1>
+        <div class="page-header__nav-wrap">
+          <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
+          <nav class="main-nav" style="display: none;">
+            <ul>
+              <li class="active"><a href="#">Информация</a></li>
+              <li><a href="#">Возможности</a></li>
+              <li><a href="#">Отзывы</a></li>
+              <li><a href="#">Стоимость</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div class="intro">
+      <div class="intro__container">
+        <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
+        <div class="intro__desc">
+          <a class="btn" href="#">Скачать приложение</a>
+          <ul class="intro__apps-list">
+            <li><img src="img/icon--apple.png" alt="Apple"></li>
+            <li><img src="img/icon--android.png" alt="Android"></li>
+            <li><img src="img/icon--windows.png" alt="Windows"></li>
           </ul>
-        </nav>
+          <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
+        </div>
       </div>
     </div>
-  </header>
-  <div class="intro">
-    <div class="intro__container">
-      <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-      <div class="intro__desc">
-        <a class="btn" href="#">Скачать приложение</a>
-        <ul class="intro__apps-list">
-          <li><img src="img/icon--apple.png" alt="Apple"></li>
-          <li><img src="img/icon--android.png" alt="Android"></li>
-          <li><img src="img/icon--windows.png" alt="Windows"></li>
+    <main class="page-main">
+      <div class="box">
+        <div class="page-caption">Устали от серости мегаполиса?</div>
+        <div class="page-caption">Нам есть, что вам предложить!</div>
+      </div>
+      <div class="box box--shear">
+        <ul class="features">
+          <li class="features__item">
+            <strong class="features__caption">Поднимает настроение</strong>
+            <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+          </li>
+          <li class="features__item">
+            <strong class="features__caption">Меняет мир вокруг</strong>
+            <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </li>
+          <li class="features__item">
+            <strong class="features__caption">Заводит новых друзей</strong>
+            <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+          </li>
         </ul>
-        <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
       </div>
-    </div>
-  </div>
-  <main>
-    <div class="box">
-      <div class="page-caption">Устали от серости мегаполиса?</div>
-      <div class="page-caption">Нам есть, что вам предложить!</div>
-    </div>
-    <div class="box box--shear">
-      <ul class="features">
-        <li class="features__item">
-          <strong class="features__caption">Поднимает настроение</strong>
-          <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-        </li>
-        <li class="features__item">
-          <strong class="features__caption">Меняет мир вокруг</strong>
-          <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        </li>
-        <li class="features__item">
-          <strong class="features__caption">Заводит новых друзей</strong>
-          <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-        </li>
-      </ul>
-    </div>
-    <div class="box">
-      <ul class="slider slider--reviews">
-        <li class="active">
-          <blockquote class="reviews">
-            <cite class="reviews__author">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-        </li>
-        <li>
-          <blockquote class="reviews">
-            <cite class="reviews__author">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-        </li>
-        <li>
-          <blockquote class="reviews">
-            <cite class="reviews__author">Николай Петров</cite>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </blockquote>
-        </li>
-      </ul>
-      <div class="slider__pagination">
-        <i class="active"></i>
-        <i></i>
-        <i></i>
+      <div class="box">
+        <div class="slider slider--reviews">
+          <div class="active">
+            <blockquote class="reviews">
+              <cite class="reviews__author">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
+          <div>
+            <blockquote class="reviews">
+              <cite class="reviews__author">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
+          <div>
+            <blockquote class="reviews">
+              <cite class="reviews__author">Николай Петров</cite>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+          </div>
+        </div>
+        <div class="slider__pagination">
+          <i class="active"></i>
+          <i></i>
+          <i></i>
+        </div>
       </div>
-    </div>
-    <div class="box box--shear">
-      <ul class="slider slider--price">
-        <li class="active">
-          <table class="price-table">
-            <tr>
-              <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
-            </tr>
-            <tr>
-              <td>Розовый фильтр</td>
-              <td><span class="check"><i class="checked">есть</i></span></td>
-            </tr>
-            <tr>
-              <td>Смайлики</td>
-              <td><span class="check"><i class="checked">есть</i></span></td>
-            </tr>
-            <tr>
-              <td>Комментарии</td>
-              <td><span class="check"><i>нет</i></span></td>
-            </tr>
-          </table>
-        </li>
-        <li>
-          <table class="price-table">
-            <tr>
-              <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
-            </tr>
-            <tr>
-              <td>Розовый фильтр</td>
-              <td><span class="check"><i class="checked">есть</i></span></td>
-            </tr>
-            <tr>
-              <td>Смайлики</td>
-              <td><span class="check"><i class="checked">есть</i></span></td>
-            </tr>
-            <tr>
-              <td>Комментарии</td>
-              <td><span class="check"><i>нет</i></span></td>
-            </tr>
-          </table>
-        </li>
-      </ul>
-      <div class="slider__pagination">
-        <i class="active"></i>
-        <i></i>
-        <i></i>
+      <div class="box box--shear">
+        <div class="slider slider--price">
+          <div class="active">
+            <table class="price-table">
+              <tr>
+                <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+              </tr>
+              <tr>
+                <td>Розовый фильтр</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+              </tr>
+              <tr>
+                <td>Смайлики</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+              </tr>
+              <tr>
+                <td>Комментарии</td>
+                <td><span class="check"><i>нет</i></span></td>
+              </tr>
+            </table>
+          </div>
+          <div>
+            <table class="price-table">
+              <tr>
+                <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
+              </tr>
+              <tr>
+                <td>Розовый фильтр</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+              </tr>
+              <tr>
+                <td>Смайлики</td>
+                <td><span class="check"><i class="checked">есть</i></span></td>
+              </tr>
+              <tr>
+                <td>Комментарии</td>
+                <td><span class="check"><i>нет</i></span></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="slider__pagination">
+          <i class="active"></i>
+          <i></i>
+          <i></i>
+        </div>
       </div>
-    </div>
-  </main>
-  <footer class="page-footer">
-    <div class="box box--angle">
-      <div class="page-footer__contacts">
-        <h2 class="page-caption">Остались вопросы? Свяжитесь с нами!</h2>
-        <dl>
-          <dt>Звоните:</dt>
-          <dd>8 (800) 1000 900</dd>
-          <dt>Пишите:</dt>
-          <dd>hello@pinkapp.ru</dd>
-          <dt>Приезжайте в гости:</dt>
-          <dd>Санкт-Петербург, Невский проспект, д. 20</dd>
-        </dl>
+    </main>
+    <footer class="page-footer">
+      <div class="box box--angle">
+        <div class="page-footer__contacts">
+          <h2 class="page-caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
+          <dl class="page-footer__list">
+            <dt>Звоните:</dt>
+            <dd>8 (800) 1000 900</dd>
+          </dl>
+          <dl class="page-footer__list">
+            <dt>Пишите:</dt>
+            <dd>hello@pinkapp.ru</dd>
+          </dl>
+          <dl class="page-footer__list">
+            <dt>Приезжайте в гости:</dt>
+            <dd>Санкт-Петербург, <br>Невский проспект, д. 20</dd>
+          </dl>
+        </div>
       </div>
       <div class="page-footer__map">
         <img src="img/map.png" alt="Map">
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
   <!-- <script src="js/script.js"></script> -->
         <!-- PixLayout -->
   <script src="assets/jquery.js"></script>
