--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
           </dl>
         </div>
       </div>
-      <div class="page-footer__map">
-        <img src="img/map.png" alt="Map">
-      </div>
+      <div class="page-footer__map"></div>
     </footer>
   </div>
   <!-- <script src="js/script.js"></script> -->
