--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <nav class="main-nav" style="display: none;">
           <ul>
             <li class="active"><a href="#">Информация</a></li>
-            <li><a href="#">Возможности</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Стоимость</a></li>
+            <li><a href="javascript:void(0);">Возможности</a></li>
+            <li><a href="javascript:void(0);">Отзывы</a></li>
+            <li><a href="javascript:void(0);">Стоимость</a></li>
           </ul>
         </nav>
       </div>
@@ -33,7 +33,7 @@
     <div class="intro__container">
       <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
       <div class="intro__desc">
-        <a class="btn" href="#">Скачать приложение</a>
+        <a class="btn" href="javascript:void(0);">Скачать приложение</a>
         <ul class="intro__apps-list">
           <li><img src="img/icon--apple.png" alt="Apple"></li>
           <li><img src="img/icon--android.png" alt="Android"></li>
@@ -66,6 +66,7 @@
               <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
+          <img src="img/mob.png">
         </div>
       </div>
       <div class="box">
@@ -154,11 +155,11 @@
             <h2 class="page-footer__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
             <dl class="page-footer__list">
               <dt>Звоните:</dt>
-              <dd>8 (800) 1000 900</dd>
+              <dd><a href="tel:88001000900">8 (800) 1000 900</a></dd>
             </dl>
             <dl class="page-footer__list">
               <dt>Пишите:</dt>
-              <dd>hello@pinkapp.ru</dd>
+              <dd><a href="mailto:hello@pinkapp.ru">hello@pinkapp.ru</a></dd>
             </dl>
             <dl class="page-footer__list">
               <dt>Приезжайте в гости:</dt>
