linear-gradient + transformation

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </blockquote>
             </div>
-            <div>
+           <!--  <div>
               <blockquote class="reviews">
                 <cite class="reviews__author">Николай Петров</cite>
                 <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
@@ -90,7 +90,7 @@
                 <cite class="reviews__author">Николай Петров</cite>
                 <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
               </blockquote>
-            </div>
+            </div> -->
           </div>
           <div class="slider__pagination">
             <i class="active"></i>
@@ -121,7 +121,7 @@
                 </tr>
               </table>
             </div>
-            <div class="slide">
+            <!-- <div class="slide">
               <table class="price-table">
                 <tr>
                   <th colspan="2" class="price-table__caption">Стандарт <span>3,99 USD</span></th>
@@ -139,7 +139,7 @@
                   <td><span class="check"><i>нет</i></span></td>
                 </tr>
               </table>
-            </div>
+            </div> -->
           </div>
           <div class="slider__pagination">
             <i class="active"></i>
