--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title>HTML Academy: Pink</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
@@ -10,98 +9,133 @@
 <body>
 <div class="page-wrap">
   <header class="page-header">
-    <div class="page-header__container">
-      <h1 class="logo">
-        <a href="index.html">
-        <img src="img/pink-logo-mob.png" alt="Pink">
-<!--           <img src="img/logo.svg" height="24" width="74" alt="Pink"> -->
-        </a>
-      </h1>
-      <div class="page-header__nav-wrap">
-        <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
-        <nav class="main-nav" style="display: none;">
-          <ul>
-            <li class="active"><a href="#">Информация</a></li>
-            <li><a href="javascript:void(0);">Возможности</a></li>
-            <li><a href="javascript:void(0);">Отзывы</a></li>
-            <li><a href="javascript:void(0);">Стоимость</a></li>
-          </ul>
-        </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3">
+          <h1 class="logo">
+            <a href="index.html">
+            <img src="img/pink-logo-mob.png" alt="Pink">
+    <!--    <img src="img/logo.svg" height="24" width="74" alt="Pink"> -->
+            </a>
+          </h1>
+        </div>
+        <div class="col-xs-9">
+          <div class="page-header__nav-wrap">
+            <a class="nav-toggle  js-nav-toggle" title="Меню">Меню</a>
+            <nav class="main-nav" style="display: none;">
+              <ul>
+                <li class="active"><a href="#">Информация</a></li>
+                <li><a href="javascript:void(0);">Возможности</a></li>
+                <li><a href="javascript:void(0);">Отзывы</a></li>
+                <li><a href="javascript:void(0);">Стоимость</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </div>
   </header>
+
   <div class="intro">
-    <div class="intro__container">
-      <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
-      <div class="intro__desc">
-        <a class="btn" href="javascript:void(0);">Скачать приложение</a>
-        <ul class="intro__apps-list">
-          <li><img src="img/icon--apple.png" alt="Apple"></li>
-          <li><img src="img/icon--android.png" alt="Android"></li>
-          <li><img src="img/icon--windows.png" alt="Windows"></li>
-        </ul>
-        <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="intro__container">
+            <h2 class="intro__caption">Взгляните на жизнь иначе!</h2>
+            <div class="intro__desc">
+              <a class="btn" href="javascript:void(0);">Скачать приложение</a>
+              <ul class="intro__apps-list">
+                <li><img src="img/icon--apple.png" alt="Apple"></li>
+                <li><img src="img/icon--android.png" alt="Android"></li>
+                <li><img src="img/icon--windows.png" alt="Windows"></li>
+              </ul>
+              <p>Доступно для iPhone, iPad, Android, Windows phone, Mac OS, Windows 8</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  
     <main class="page-main">
       <div class="box">
-          <div class="box__container">
-            <div class="page-caption">Устали от серости мегаполиса?</div>
-            <div class="page-caption">Нам есть, что вам предложить!</div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="box__container">
+                <div class="page-caption">Устали от серости мегаполиса?</div>
+                <div class="page-caption">Нам есть, что вам предложить!</div>
+              </div>
+            </div>
           </div>
-      </div>
-      <div class="box box--shear">
-        <div class="box__container">
-          <ul class="features">
-            <li class="features__item">
-              <strong class="features__caption">Поднимает настроение</strong>
-              <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
-            </li>
-            <li class="features__item">
-              <strong class="features__caption">Меняет мир вокруг</strong>
-              <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </li>
-            <li class="features__item">
-              <strong class="features__caption">Заводит новых друзей</strong>
-              <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-            </li>
-          </ul>
-          <img src="img/mob.png">
         </div>
       </div>
+
+      <div class="box box--shear">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="box__container">
+                <ul class="features">
+                  <li class="features__item">
+                    <strong class="features__caption">Поднимает настроение</strong>
+                    <p>Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+                  </li>
+                  <li class="features__item">
+                    <strong class="features__caption">Меняет мир вокруг</strong>
+                    <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+                  </li>
+                  <li class="features__item">
+                    <strong class="features__caption">Заводит новых друзей</strong>
+                    <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+                  </li>
+                </ul>
+                <img src="img/mob.png">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="box">
-        <div class="box__container">
-          <div class="slider slider--reviews">
-            <div class="active">
-              <blockquote class="reviews">
-                <cite class="reviews__author">Николай Петров</cite>
-                <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-              </blockquote>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="box__container">
+                <div class="slider slider--reviews">
+                  <div class="active">
+                    <blockquote class="reviews">
+                      <cite class="reviews__author">Николай Петров</cite>
+                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    </blockquote>
+                  </div>
+                  <!-- <div>
+                    <blockquote class="reviews">
+                      <cite class="reviews__author">Николай Петров</cite>
+                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    </blockquote>
+                  </div>
+                  <div>
+                    <blockquote class="reviews">
+                      <cite class="reviews__author">Николай Петров</cite>
+                      <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                    </blockquote>
+                  </div> -->
+                </div>
+                <div class="slider__pagination">
+                  <i class="active"></i>
+                  <i></i>
+                  <i></i>
+                </div>
+              </div>
             </div>
-           <!--  <div>
-              <blockquote class="reviews">
-                <cite class="reviews__author">Николай Петров</cite>
-                <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-              </blockquote>
-            </div>
-            <div>
-              <blockquote class="reviews">
-                <cite class="reviews__author">Николай Петров</cite>
-                <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-              </blockquote>
-            </div> -->
-          </div>
-          <div class="slider__pagination">
-            <i class="active"></i>
-            <i></i>
-            <i></i>
           </div>
         </div>
       </div>
+
       <div class="box box--shear">
         <div class="box__container">
-          <div class="slider slider--price">
+          <div class="slider slider--price visible-xs">
             <div class="slide active">
               <table class="price-table">
                 <tr>
@@ -149,28 +183,67 @@
         </div>
       </div>
     </main>
+
     <footer class="page-footer">
       <div class="box box--angle">
-        <div class="box__container">
-          <div class="page-footer__contacts">
-            <h2 class="page-footer__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
-            <dl class="page-footer__list">
-              <dt>Звоните:</dt>
-              <dd><a href="tel:88001000900">8 (800) 1000 900</a></dd>
-            </dl>
-            <dl class="page-footer__list">
-              <dt>Пишите:</dt>
-              <dd><a href="mailto:hello@pinkapp.ru">hello@pinkapp.ru</a></dd>
-            </dl>
-            <dl class="page-footer__list">
-              <dt>Приезжайте в гости:</dt>
-              <dd>Санкт-Петербург, <br>Невский проспект, д. 20</dd>
-            </dl>
+        <div class="container">
+          <div class="row">
+            <div class="box__container">
+              <div class="contacts">
+                <div class="col-lg-12">
+                  <h2 class="contacts__caption">Остались вопросы? <br>Свяжитесь с нами!</h2>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                  <dl class="contacts__list">
+                    <dt>Звоните:</dt>
+                    <dd><a href="tel:88001000900">8 (800) 1000 900</a></dd>
+                  </dl>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                  <dl class="contacts__list">
+                    <dt>Пишите:</dt>
+                    <dd><a href="mailto:hello@pinkapp.ru">hello@pinkapp.ru</a></dd>
+                  </dl>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                  <dl class="contacts__list">
+                    <dt>Приезжайте в гости:</dt>
+                    <dd>Санкт-Петербург, <br>Невский проспект, д. 20</dd>
+                  </dl>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="page-footer__map"></div>
+
+      <div class="contacts__map"></div>
+
+      <div class="socials hidden-xs">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4 col-md-3">
+              <div class="logo">
+                <img src="img/logo-footer@1x.png" height="40" width="146" alt="Pink">
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-6">
+              <div class="social">
+                <a class="social__btn social__btn--tw" href="javascript:void(0)">Twitter</a>
+                <a class="social__btn social__btn--fb" href="javascript:void(0)">Facebook</a>
+                <a class="social__btn social__btn--youtube" href="javascript:void(0)">Youtube</a>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-3">
+              <div class="socials__copyright">
+                <span>Website by</span><a class="copyright-glukhanko block--copyright" href="http://glukhanko.ru">Glukhanko</a> <span>for</span><a class="copyright-academy block--copyright" href="http://htmlacademy.ru">Html Academy</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
+
   </div>
   <!-- <script src="js/script.js"></script> -->
         <!-- PixLayout -->
